# standing-bot

./: .gitignore  Cargo.toml  devshell.nix  flake.nix  publish.sh
src/: main.rs  message_handling.rs  openrouter.rs  periodic_updates.rs  private_message_handling.rs  sticker_handling.rs  time.rs  total_management.rs
