[package]
name = "standing_bot"
version = "0.0.1"
authors = [ "Andrew Cerkin <cerkin-3@yandex.ru>" ]
edition = "2021"

[dependencies]
# rustls = "0.23.12"
# openssl-sys = "=0.7.17"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
teloxide = { version = "0.13", features = ["macros","rustls", "ctrlc_handler", "sqlite-storage-rustls"], default-features = false }
log = "0.4"
chrono = "0.4"

dotenv = "0.15.0"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
teloxide_tests = "0.2.0"